<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".activities.MainActivity">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorSecondary"
                android:elevation="4dp"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/logged_username_default"/>
            <Button
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:text="@string/logout_label"/>

        </androidx.appcompat.widget.Toolbar>
        <EditText
                android:id="@+id/edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text=""
                android:hint="@string/edit_username_hint"
                android:autofillHints="username"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_bar"/>
        <Button
                android:id="@+id/call_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/edit_username"
                android:text="@string/button_call_user_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_username"/>

        <FrameLayout
                android:id="@+id/bottom_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="?attr/colorOnPrimary"
                android:elevation="8dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/keypad_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:src="@drawable/keypad"
                app:backgroundTint="@color/gray"
                app:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/keypad_button_description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>